--- a/meetLink/static/css/styles.css
+++ b/meetLink/static/css/styles.css
@@ -1,4 +1,4 @@
-/*********************************! COLORES BASE **********************************/
+/*********************************! COLORES Y FUENTE **********************************/
 :root {
     --negro: #000000;
     --azul: #B5F8FE;
@@ -9,6 +9,14 @@
     --rojo: #FF6362;
 }
 
+
+.lexend-font {
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /*********************************! GENERAL **********************************/
 
 html, body {
@@ -17,7 +25,7 @@ html, body {
     padding: 0;
     background-color: var(--negro);
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Lexend", sans-serif;
 }
 
 main {
@@ -27,12 +35,10 @@ main {
     background-color: var(--negro);
 }
 
-@media (max-width: 768px) {
-}
 
 /*********************************! NAVBAR **********************************/
-.sidebar {
-    background-color: #111;
+#navbar {
+    background-color: var(--negro);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -43,13 +49,17 @@ main {
     width: 220px;
     height: 100vh;
     z-index: 1030;
-    display: flex;
-    flex-direction: column;
     padding: 2rem 1rem;
 }
 
+#contenido-navbar {
+    flex-grow: 1 !important;
+    padding: 0;
+    height: 100vh;
+    overflow-y: visible;
+}
 
-.sidebar .user-info img {
+#navbar .user-info img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -59,17 +69,17 @@ main {
 }
 
 
-.sidebar .user-info h5 {
+#navbar .user-info h5 {
     color: var(--celeste);
 }
 
-.sidebar .nav-link {
+#navbar .nav-link {
     color: white;
     font-weight: bold;
     margin-bottom: 0.5rem;
 }
 
-.sidebar .nav-link.active {
+#navbar .nav-link.active {
     background-color: var(--verde);
     color: black;
     border-radius: 5px;
@@ -80,14 +90,15 @@ main {
     color: white;
     border: none;
     padding: 0.5rem 1rem;
+    margin-bottom: 2rem;
     font-weight: bold;
 }
 
 .logout-btn:hover {
-    background-color: #e95452;
+    background-color: #ea120e;
 }
 
-.sidebar-footer {
+.navbar-footer {
     text-align: center;
     padding-bottom: 1rem;
 }
