--- a/meetLink/templates/meetLink/inicio/index.html
+++ b/meetLink/templates/meetLink/inicio/index.html
@@ -3,7 +3,7 @@
 {% block contenido %}
 
 <!-- Botón desplegar menú (pantallas pequeñas) -->
-<button class="btn btn-outline-light d-md-none m-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu">
+<button class="btn btn-outline-light d-md-none m-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbar" aria-controls="navbar">
     ☰
 </button>
 
@@ -41,14 +41,14 @@
 </div>
 
 <!-- MAIN CONTENT -->
-<main class="content-wrapper pt-4 px-3">
-    <div class="row">
+<main class="content-wrapper">
+    <div id="content" class="row">
         <!-- Parte central -->
         <div id="columna-contenido" class="col-md-6 mb-4">
-            <div class="card text p-3">
+            <div id="card-crearEvento" class="card text p-3">
                 <h4><strong>¿Algo nuevo?</strong></h4>
                 <p>Planifica una nueva actividad o viaje y compártelo con tus contactos.</p>
-                <a class="btn btn-outline border-dark">CREAR</a>
+                <a id="btn-crearEvento" class="btn btn-outline border-dark">CREAR</a>
             </div>
         </div>
 
