--- a/meetLink/templates/meetLink/sesion/logout.html
+++ b/meetLink/templates/meetLink/sesion/logout.html
@@ -1,7 +1,7 @@
 {% extends "meetLink/base.html" %}
 
 {% block contenido %}
-<div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #bced09;">
+<div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
     <div id="form-card" class="p-5 bg-white rounded shadow">
         <h2 class="mb-4 text-center">Hasta pronto, {{ user.username }}</h2>
         <p class="text-center">Has cerrado sesión correctamente.</p>
