--- a/meetLink/templates/meetLink/base.html
+++ b/meetLink/templates/meetLink/base.html
@@ -8,6 +8,7 @@
   <title>MeetL!nk</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
     <body>
