--- a/meetLink/templates/meetLink/contactos/contactos_grupo_update.html
+++ b/meetLink/templates/meetLink/contactos/contactos_grupo_update.html
@@ -1,33 +1,21 @@
 {% extends "meetLink/base.html" %}
 
 {% block contenido %}
-
 <div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
     <div id="form-card" class="p-5 bg-white rounded shadow">
         <div class="content">
-            <h2 class="mb-4 text-center">Crear Evento</h2>
-
-            {% if messages %}
-                <div>
-                    {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-
+            <h2 class="mb-4 text-center">Editar grupo de contacto</h2>
             <form method="post">
                 {% csrf_token %}
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Guardar Evento</button>
+                <button type="submit" class="btn btn-success w-100">Guardar cambios</button>
             </form>
-
             <p class="mt-3 text-center">
-                <a href="{% url 'eventos' %}">Volver a Eventos</a>
+                <a href="{% url 'contactos' %}">← Volver a grupos</a>
             </p>
         </div>
     </div>
 </div>
-
 {% endblock %}
